--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ override.tf.json
 # End of https://www.gitignore.io/api/go
 # built binary
 terraform-provider-solace
+# build distribution binaries
+/dist/
