--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,3 +21,6 @@ linters:
 linters-settings:
   errcheck:
     ignore: github.com/hashicorp/terraform/helper/schema:ForceNew|Set,fmt:.*,io:Close,github.com/terraform-providers/terraform-provider-google/google:Set
+
+run:
+  modules-download-mode: vendor
