--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,15 @@ install:
   - make tools
 script:
   - make
-after_success:
-  - if [[ -n "$TRAVIS_TAG" ]]; then make release; fi
+
+# calls goreleaser
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: curl -sL https://git.io/goreleaser | bash
+  on:
+    tags: true
+    condition: $TRAVIS_OS_NAME = linux  # Ensure deploy only ever runs once.
+
 notifications:
   email: true
